[package]
name = "task_partitioner"
version = "0.1.0"
edition = "2021"
authors = [ "Kaspar Schleiser <kaspar@schleiser.de>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "helper lib that allows partitioning named tasks by count or hash"
repository = "https://github.com/kaspar030/task_partitioner"

[dependencies]
twox-hash = "1.6.3"
thiserror = "1.0.37"
